# wids-global-datathon-2026

./: README.md  main.py  pyproject.toml
data/submission/: submission.csv
data/transformed/: features_to_remove.json  test.csv  train.csv
docs/: run_helpers.md
src/tasks/: data_transformation.py  train.py
src/utils/: wids_metrics.py
